# Face-Door

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIB.md  CONTRIBUTING.md  Client.py  ComputerVisionColorcodes.md  Install.sh  LICENSE  README.md  Required.libs  StartSecuServe.sh  gitinore  jetson.sh  ossar-analysis.yml  out.profile  output.avi  requirements.txt  requirments.txt  startCv.sh
.github/workflows/: codacy-analysis.yml
features/: download_faces.feature
features/steps/: download_faces.py
src/: Client.py  Config.ini  Config.py  Database.py  HyperVisar.py  Main.py  Maintest.py  Mian.py  Plate.py  View Video Web.py  Webserver.py  __init__.py  cliet.py  control.py  cvcontroller.py  doorcontrol.py  interativerun.py  main.py  philipsControl.py  requirements-for-server.txt  requirements.txt  video.py
src/facerec/: api.py
src/prosessing/: ClientMessageHandler.py  Config.ini  Database.py  KnnClassifiyer.py  SmsHandler.py  UserAleartNotifyer.py  View Video Web.py  dataclass.py  philipsControl.py  platedetect.py  textstream.py  video.py  videoThread.py
src/prosessing/audio/: CallUser.py  ReciveCall.py  RecordAudio.py
src/templates/: feed.html  index.html
src/test/: test_opencv.py
src/utils/: textColors.py
src/web/: .env  Client.py  Config.ini  Dockerfile  README.md  config.py  run.py  startweb.sh  webData.py  webconfig.py
web/: .gitignore  DataBase.py  DataStorage.py  DataSub.py  run.py  webData.py
web/FaceDoor/: package.json
web/app/: __init__.py
web/dashboard/: gulpfile.js  package.json
web/flask-dashboard-corona-dark/: README.md  run.py
(+67 files in other folders)
